/*
 * Copyright (c) 2020. Blossom Budgeting LLC
 * All Rights Reserved
 */

plugins {
	id 'org.springframework.boot' version '2.2.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id 'groovy'
	id 'org.sonarqube' version '2.8'
	id 'jacoco'
}

group = 'io.blossom.microservices'
version = '0.0.1'
sourceCompatibility = '11'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}


repositories {
	mavenCentral()
	maven {
		url "https://maven.pkg.github.com/blossombudgeting/budget-common-util"
		credentials {
			username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
			password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
		}
	}
}
ext {
	set('springCloudVersion', "Hoxton.SR1")
}

dependencies {
	implementation(
			'io.blossombudgeting.util:budget-common-util:0.0.3.1',
			'org.springdoc:springdoc-openapi-ui:1.1.30',
			'org.springframework.boot:spring-boot-starter-security',
			'org.springframework.boot:spring-boot-starter-data-mongodb',
			'org.springframework.boot:spring-boot-starter-web'
	)

	compileOnly 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	annotationProcessor(
			'org.springframework.boot:spring-boot-configuration-processor',
			'org.projectlombok:lombok'
	)

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	testImplementation(
			'org.spockframework:spock-core:1.2-groovy-2.4',
			'org.spockframework:spock-spring:1.2-groovy-2.4',
			'de.flapdoodle.embed:de.flapdoodle.embed.mongo',
			'junit:junit:4.12'
	)

}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	useJUnitPlatform()
}

jacoco {
	toolVersion = "0.8.5"
	reportsDir = file("$buildDir/customJacocoReportDir")
}
jacocoTestReport {
	reports {
		xml.enabled false
		csv.enabled false
		html.destination file("${buildDir}/jacocoHtml")
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.8
			}
		}

		rule {
			enabled = false
			element = 'CLASS'
			includes = ['org.gradle.*']

			limit {
				counter = 'LINE'
				value = 'TOTALCOUNT'
				maximum = 0.3
			}
		}
	}
}

